--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "airtable": "^0.11.5",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "html2canvas": "^1.4.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
